projects/Media/docroot/assets/css/common/grid.css
/* -------------------------------------------------------------- 
   
   BLUEPRINT CSS
    * Filename:        grid.css
    * Version:         0.7.1 (2008-02-25) YYYY-MM-DD
    * Website:         http://code.google.com/p/blueprintcss/

   Generated by:
    * Blueprint CSS Grid Generator (2011-05-13) [http://bgg.kematzy.com/]

   Based on work by:
    * Olav Bjorkoy      [bjorkoy.com]
    * Nathan Borror     [playgroundblues.com]
    * Jeff Croft        [jeffcroft.com]
    * Christian Metts   [mintchaos.com]
    * Khoi Vinh         [subtraction.com]

   == STRUCTURE: ========================
    * Page width:            970 px
    * Number of columns:     24
    * Column width:          27 px
    * Margin width:          14 px
   ======================================

   By default, the grid is 970px wide, with 24 columns 
   spanning 27px, and a 14px margin between columns.

   If you need fewer or more columns, use this formula to calculate
   the new total width: 

   Total width = (number_of_columns * column_width) - margin_width

   Read more about using a grid here:
   * subtraction.com/archives/2007/0318_oh_yeeaahh.php
   
-------------------------------------------------------------- */

/* A container should group all your columns. */
.container {
  width: 970px;
  margin: 0 auto;
  max-width: 100%;
}

/* Use this class on any div.span / container to see the grid. */
.showgrid { 
  background: url(src/grid.png); 
}

/* Body margin for a sensile default look. */
body {
  margin:0; 
}


/* Columns
-------------------------------------------------------------- */

/* Sets up basic grid floating and margin. */
.span-1, .span-2, .span-3, .span-4, .span-5, .span-6, .span-7, .span-8, .span-9, .span-10, .span-11, .span-12, .span-13, .span-14, .span-15, .span-16, .span-17, .span-18, .span-19, .span-20, .span-21, .span-22, .span-23, .span-24 {float:left;margin-right: 14px;}

/* The last column in a row needs this class. */
.last { margin-right: 0; }

/* Use these classes to set the width of a column. */
.span-1  { width: 27px;}
.span-2  { width: 68px;}
.span-3  { width: 109px;}
.span-4  { width: 150px;}
.span-5  { width: 191px;}
.span-6  { width: 232px;}
.span-7  { width: 273px;}
.span-8  { width: 314px;}
.span-9  { width: 355px;}
.span-10 { width: 396px;}
.span-11 { width: 437px;}
.span-12 { width: 478px;}
.span-13 { width: 519px;}
.span-14 { width: 560px;}
.span-15 { width: 601px;}
.span-16 { width: 642px;}
.span-17 { width: 683px;}
.span-18 { width: 724px;}
.span-19 { width: 765px;}
.span-20 { width: 806px;}
.span-21 { width: 847px;}
.span-22 { width: 888px;}
.span-23 { width: 929px;}
.span-24, div.span-24 { width: 970px; margin: 0; }

/* custom spans for 15/19 wide 2 column layouts */
.span-19-1 {
  float: left;
  width: 375px;
  margin-right: 15px;
}

.span-19-2 {
  float: left;
  width: 375px;
  margin-right: 0;
}

.span-15-1 {
  float: left;
  width: 293px;
  margin-right: 15px;
}

.span-15-2 {
  float: left;
  width: 293px;
  margin-right: 0;
}

/* Add these to a column to append empty cols. */
.append-1  { padding-right: 41px;}
.append-2  { padding-right: 82px;}
.append-3  { padding-right: 123px;}
.append-4  { padding-right: 164px;}
.append-5  { padding-right: 205px;}
.append-6  { padding-right: 246px;}
.append-7  { padding-right: 287px;}
.append-8  { padding-right: 328px;}
.append-9  { padding-right: 369px;}
.append-10 { padding-right: 410px;}
.append-11 { padding-right: 451px;}
.append-12 { padding-right: 492px;}
.append-13 { padding-right: 533px;}
.append-14 { padding-right: 574px;}
.append-15 { padding-right: 615px;}
.append-16 { padding-right: 656px;}
.append-17 { padding-right: 697px;}
.append-18 { padding-right: 738px;}
.append-19 { padding-right: 779px;}
.append-20 { padding-right: 820px;}
.append-21 { padding-right: 861px;}
.append-22 { padding-right: 902px;}
.append-23 { padding-right: 943px;}


/* Add these to a column to prepend empty cols. */
.prepend-1  { padding-left: 41px;}
.prepend-2  { padding-left: 82px;}
.prepend-3  { padding-left: 123px;}
.prepend-4  { padding-left: 164px;}
.prepend-5  { padding-left: 205px;}
.prepend-6  { padding-left: 246px;}
.prepend-7  { padding-left: 287px;}
.prepend-8  { padding-left: 328px;}
.prepend-9  { padding-left: 369px;}
.prepend-10 { padding-left: 410px;}
.prepend-11 { padding-left: 451px;}
.prepend-12 { padding-left: 492px;}
.prepend-13 { padding-left: 533px;}
.prepend-14 { padding-left: 574px;}
.prepend-15 { padding-left: 615px;}
.prepend-16 { padding-left: 656px;}
.prepend-17 { padding-left: 697px;}
.prepend-18 { padding-left: 738px;}
.prepend-19 { padding-left: 779px;}
.prepend-20 { padding-left: 820px;}
.prepend-21 { padding-left: 861px;}
.prepend-22 { padding-left: 902px;}
.prepend-23 { padding-left: 943px;}



/* Border on right hand side of a column. */
div.border {
  margin-right:13px;
  border-right: 1px solid #eee;
}

/* Border with more whitespace, spans one column. */
div.colborder {
  padding-right:23px;
  margin-right:20px;
  border-right: 1px solid #eee;
}

/* Dotted border */
.dottedborder {
  margin-right:13px;
  border-right:  1px dotted #eee;
}

/* Use these classes on an element to push it into the 
   next column, or to pull it into the previous column.  */

.pull-1 { margin-left: -41px;}
.pull-2 { margin-left: -82px;}
.pull-3 { margin-left: -123px;}
.pull-4 { margin-left: -164px;}
.pull-5 { margin-left: -205px;}
.pull-6 { margin-left: -246px;}
.pull-7 { margin-left: -287px;}
.pull-8 { margin-left: -328px;}
.pull-9 { margin-left: -369px;}
.pull-10 { margin-left: -410px;}
.pull-11 { margin-left: -451px;}
.pull-12 { margin-left: -492px;}
.pull-13 { margin-left: -533px;}
.pull-14 { margin-left: -574px;}
.pull-15 { margin-left: -615px;}
.pull-16 { margin-left: -656px;}
.pull-17 { margin-left: -697px;}
.pull-18 { margin-left: -738px;}
.pull-19 { margin-left: -779px;}
.pull-20 { margin-left: -820px;}
.pull-21 { margin-left: -861px;}
.pull-22 { margin-left: -902px;}
.pull-23 { margin-left: -943px;}
.pull-24 { margin-left: -984px;}

.pull-1, .pull-2, .pull-3, .pull-4, .pull-5, .pull-6, .pull-7, .pull-8, .pull-9, .pull-10, .pull-11, .pull-12, .pull-13, .pull-14, .pull-15, .pull-16, .pull-17, .pull-18, .pull-19, .pull-20, .pull-21, .pull-22, .pull-23, .pull-24 {float:left;position:relative;}


.push-1 { margin: 0 -41px 1.5em 41px;}
.push-2 { margin: 0 -82px 1.5em 82px;}
.push-3 { margin: 0 -123px 1.5em 123px;}
.push-4 { margin: 0 -164px 1.5em 164px;}
.push-5 { margin: 0 -205px 1.5em 205px;}
.push-6 { margin: 0 -246px 1.5em 246px;}
.push-7 { margin: 0 -287px 1.5em 287px;}
.push-8 { margin: 0 -328px 1.5em 328px;}
.push-9 { margin: 0 -369px 1.5em 369px;}
.push-10 { margin: 0 -410px 1.5em 410px;}
.push-11 { margin: 0 -451px 1.5em 451px;}
.push-12 { margin: 0 -492px 1.5em 492px;}
.push-13 { margin: 0 -533px 1.5em 533px;}
.push-14 { margin: 0 -574px 1.5em 574px;}
.push-15 { margin: 0 -615px 1.5em 615px;}
.push-16 { margin: 0 -656px 1.5em 656px;}
.push-17 { margin: 0 -697px 1.5em 697px;}
.push-18 { margin: 0 -738px 1.5em 738px;}
.push-19 { margin: 0 -779px 1.5em 779px;}
.push-20 { margin: 0 -820px 1.5em 820px;}
.push-21 { margin: 0 -861px 1.5em 861px;}
.push-22 { margin: 0 -902px 1.5em 902px;}
.push-23 { margin: 0 -943px 1.5em 943px;}
.push-24 { margin: 0 -984px 1.5em 984px;}

.push-1, .push-2, .push-3, .push-4, .push-5, .push-6, .push-7, .push-8, .push-9, .push-10, .push-11, .push-12, .push-13, .push-14, .push-15, .push-16, .push-17, .push-18, .push-19, .push-20, .push-21, .push-22, .push-23, .push-24 {float:right;position:relative;}



/* Misc classes and elements
-------------------------------------------------------------- */

/* Use a .box to create a padded box inside a column.  */ 
.box { 
  padding: 1.5em; 
  margin-bottom: 1.5em; 
  background: #E5ECF9; 
}

/* Use this to create a horizontal ruler across a column. */
hr {
  background: #888; 
  color: #888;
  clear: both; 
  float: none; 
  width: 100%; 
  height: .1em;
  margin: .5em 0 .5em;
  border: none; 
}
hr.space {
  background: #fff;
  color: #fff;
}


/* Clearing floats without extra markup
   Based on How To Clear Floats Without Structural Markup by PiE
   [http://www.positioniseverything.net/easyclearing.html] */

.clearfix:after, .container:after {
    content: "."; 
    display: block; 
    height: 0; 
    clear: both; 
    visibility: hidden;
}
.clearfix, .container {display: inline-block;}
* html .clearfix,
* html .container {height: 1%;}
.clearfix, .container {display: block;}

/* Regular clearing
   apply to column that should drop below previous ones. */

.clear { clear:both; }

